# Barry

./: .gitignore  CMakeLists.txt  README.md  cg.cpp  conjgrad.cpp  multilevel.cpp  pcg.cpp  time.cpp  twolevel.cpp
data/: 300.txt  33k.txt  34.txt  665.txt  6k.txt  7.txt  862.txt  863.txt  k3.txt  mat1.txt  mat2.txt  mat3.txt  mat4.txt  v196k.txt  v300.txt  v33k.txt  v34.txt  v665.txt  v6k.txt  v862.txt
src/: CMakeLists.txt  coomatrix.cpp  coomatrix.hpp  densematrix.cpp  densematrix.hpp  operator.cpp  operator.hpp  parser.hpp  partition.hpp  solvers.cpp  solvers.hpp  sparsematrix.cpp  sparsematrix.hpp  vector.cpp  vector.hpp  vectorview.cpp  vectorview.hpp
